--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,15 @@ spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 server.port=8080
 spring.messages.basename=messages/messages
 
+# \uB514\uBC84\uAE45 \uB2E8\uACC4\uBCC4 \uC124\uC815
 logging.level.guru=debug
+logging.level.guru.sfg.brewery=debug
+logging.level.org.springframework.security=debug
 
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
+
+# spring security login info
+# UserDetailsService\uC5D0 \uC124\uC815\uD574\uC11C \uD544\uC694x
+#spring.security.user.name=spring
+#spring.security.user.password=guru
