--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
         </dependency>
         <!-- // spring-boot-starter-security 추가 -->
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-data</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.2.220</version>
