--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,10 @@ spring.data.jpa.repositories.bootstrap-mode=default
 # UserDetailsService\uC5D0 \uC124\uC815\uD574\uC11C \uD544\uC694x
 #spring.security.user.name=spring
 #spring.security.user.password=guru
+
+# show sql
+spring.jpa.properties.hibernate.show_sql=true
+# pretty format SQL
+spring.jpa.properties.hibernate.format_sql=true
+# show bind parameters
+logging.level.org.hibernate.type.descriptor.sql=trace
