--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.messages.basename=messages/messages
 # \uB514\uBC84\uAE45 \uB2E8\uACC4\uBCC4 \uC124\uC815
 logging.level.guru=debug
 logging.level.guru.sfg.brewery=debug
-logging.level.org.springframework.security=debug
+logging.level.org.springframework.security=error
 
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
@@ -34,8 +34,8 @@ spring.data.jpa.repositories.bootstrap-mode=default
 #spring.security.user.password=guru
 
 # show sql
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 # pretty format SQL
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 # show bind parameters
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
